--- a/app/individual_view/view.html
+++ b/app/individual_view/view.html
@@ -1,1 +1,4 @@
-<p>individual view </p>
+<p ng-bind="selectedDataFile"> </p>
+<p ng-bind="selectedScoreAttribute"> </p>
+<p ng-bind="selectedGroupAttribute"> </p>
+<p ng-bind="selectedOutcomeAttribute"> </p>
