--- a/app/group_view/view.html
+++ b/app/group_view/view.html
@@ -1,1 +1,4 @@
-<p> group view </p>
+<p ng-bind="selectedDataFile"> </p>
+<p ng-bind="selectedScoreAttribute"> </p>
+<p ng-bind="selectedGroupAttribute"> </p>
+<p ng-bind="selectedOutcomeAttribute"> </p>
