JS for Conditional group fairness

--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
     <script src="group_view/view.js"></script>
     <!-- Individual View JS -->
     <script src="individual_view/view.js"></script>
-
+    <!-- Conditional Group View JS -->
+    <script src="conditional_group_view/view.js"></script>
   </body>
 </html>
